--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-scroll-up-button": "^1.6.4",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
