--- a/back_end/Gemfile
+++ b/back_end/Gemfile
@@ -17,6 +17,8 @@ gem 'puma', '~> 4.1'
 gem 'bcrypt', '~> 3.1.7'
 gem 'jwt'
 gem 'active_model_serializers', '~> 0.10.0'
+gem "dotenv-rails", groups: [:development, :test]
+
 
 
 
